# elm-motorsport-analysis

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LIVE_TIMING.md  biome.json  elm-land.json  elm-pages.config.mjs  elm.js  elm.json  flake.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  snowpack.config.json
.claude/: settings.json  settings.local.json
.codex/: config.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
app/: .gitignore  Shared.elm  Site.elm  elm-pages.config.mjs  elm.json  index.ts  output.css  package.json  playwright.config.ts  style.css
assets/: index-BLXfDlog.js
benchmark/: ArrayBenchmark.elm  Example.elm  Fixture.elm  Lap.elm  LapBenchmark.elm  LeaderboardBenchmark.elm  MockData.elm  PreprocessBenchmark.elm  PreprocessInternalBenchmark.elm  RaceControlBenchmark.elm  package.json
cli/: .gitignore  .parcelrc  Cargo.toml  elm.json  package-lock.json  package.json  test.json  test_complete_output.json  test_data.csv  test_positions_output.json  tsconfig.json  vite.config.ts
cli/cli/: Cargo.toml  test_missing_features.json
cli/cli/src/: args.rs  config.rs  csv_input.rs  domain.rs  error.rs  events.rs  lib.rs  main.rs  output.rs  pipeline.rs  preprocess.rs  structure.rs  transform.rs  validation.rs
cli/cli/src/pipeline/: csv_input.rs  io.rs  mod.rs  structure.rs
cli/cli/src/stages/: csv_input.rs  files.rs  mod.rs  output.rs  structure.rs  transform.rs
cli/cli/tests/: TDD_DIFFERENCES_SUMMARY.md  elm_compatibility.rs  integration.rs  integration_real_data.rs
flix/: flix.toml
(+595 files in other folders)
