[package]
name = "cli"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
motorsport = { path = "../motorsport" }
csv = "1.3"
serde = { workspace = true }
serde_json = { workspace = true }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3.0"
